--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ targetCompatibility = JavaVersion.VERSION_1_8
 
 archivesBaseName = 'exotic-blocks'
 group = 'grondag'
-def version_tag = 'xblocks_version'
+def version_tag = 'exotic_blocks_version'
 
 if (grgit == null) {
 	version = '99.0.0-nogit'
