--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 org.gradle.jvmargs=-Xmx2G
 
-exotic_matter_version=1.0
+exotic_blocks_version=0.1
+exotic_matter_version=1.1
 
 minecraft_version=1.14.4
 yarn_mappings=1.14.4+build.1
@@ -13,7 +14,7 @@ clothconfig_version=0.5.2
 
 fermion_version=1.1
 special_circumstances_version=1.1
-fermion_modkeys_version=1.1
+fermion_modkeys_version=1.2
 fermion_varia_version=1.1
 fermion_simulator_version=1.2
 canvas_version=0.7
