--- a/build.gradle
+++ b/build.gradle
@@ -74,10 +74,10 @@ dependencies {
         exclude group :"io.github.prospector.modmenu"
 	}
 
-	modImplementation ("io.github.cottonmc:LibGui:1.3.1") {
+	modImplementation ("io.github.cottonmc:LibGui:${libgui_version}") {
 		exclude group :"net.fabricmc.fabric-api"
 	}
-	include "io.github.cottonmc:LibGui:1.3.1"
+	include "io.github.cottonmc:LibGui:${libgui_version}"
 	
 	modImplementation ("me.shedaniel.cloth:config-2:${clothconfig_version}") {
         exclude group :"io.github.prospector.modmenu"
