--- a/gradle.properties
+++ b/gradle.properties
@@ -3,20 +3,20 @@ org.gradle.jvmargs=-Xmx2G
 exotic_blocks_version=0.5
 exotic_matter_version=1.7
 
-minecraft_version=19w39a
-yarn_mappings=19w39a+build.8
-loader_version=0.6.2+build.166
-fabric_version=0.4.2+build.244-1.15
+minecraft_version=1.15-pre1
+yarn_mappings=1.15-pre1+build.3
+loader_version=0.7.1+build.173
+fabric_version=0.4.13+build.263-1.15
 devmode_version=1.0.14
-modmenu_version=1.7.13-unstable.19w38b+build.5
+modmenu_version=1.7.15-unstable.1.15-pre1+build.13
 
-clothconfig_version=1.1.2
+clothconfig_version=2.4-unstable.201911031154
 
-fermion_version=1.3
+fermion_version=1.6
 special_circumstances_version=1.3
 fermion_modkeys_version=1.3
-fermion_varia_version=1.3
+fermion_varia_version=1.6
 fermion_simulator_version=1.3
 canvas_version=0.8
 frex_version=1.1
-joml_version=1.1
+joml_version=1.2
