--- a/gradle.properties
+++ b/gradle.properties
@@ -1,22 +1,20 @@
 org.gradle.jvmargs=-Xmx2G
+org.gradle.daemon=false
 
+group=grondag
+mod_name=exotic-blocks
 exotic_blocks_version=0.5
 exotic_matter_version=1.7
 
-minecraft_version=1.15-pre1
-yarn_mappings=1.15-pre1+build.3
+mc_tag = mc115
+minecraft_version=1.15-pre2
+yarn_mappings=1.15-pre2+build.3
 loader_version=0.7.1+build.173
-fabric_version=0.4.13+build.263-1.15
-devmode_version=1.0.14
-modmenu_version=1.7.15-unstable.1.15-pre1+build.13
+fabric_version=0.4.14+build.266-1.15
 
-clothconfig_version=2.4-unstable.201911031154
+cordage_mappings=1.15-pre1+build.1294
 
-fermion_version=1.6
-special_circumstances_version=1.3
-fermion_modkeys_version=1.3
-fermion_varia_version=1.6
-fermion_simulator_version=1.3
-canvas_version=0.8
-frex_version=1.1
-joml_version=1.2
+license_header=APACHE
+
+github_repository_owner=grondag
+github_repository=exotic-blocks
