--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,8 @@ mod_name=exotic-blocks
 exotic_blocks_version=0.7
 exotic_matter_version=1.8
 
+rei_version=3.2.8-unstable.201911181133
+
 mc_tag = mc115
 minecraft_version=1.15-pre2
 yarn_mappings=1.15-pre2+build.3
