--- a/gradle.properties
+++ b/gradle.properties
@@ -3,16 +3,16 @@ org.gradle.daemon=false
 
 group=grondag
 mod_name=exotic-blocks
-exotic_blocks_version=0.10
-exotic_matter_version=1.11
+exotic_blocks_version=0.12
+exotic_matter_version=1.12
 
-rei_version=3.2.8-unstable.201911181133
+rei_version=3.2.15
 
 mc_tag = mc115
-minecraft_version=1.15-pre3
-yarn_mappings=1.15-pre3+build.2
+minecraft_version=1.15-pre6
+yarn_mappings=1.15-pre6+build.1
 loader_version=0.7.2+build.174
-fabric_version=0.4.18+build.271-1.15
+fabric_version=0.4.20+build.273-1.15
 
 cordage_mappings=1.15-pre1+build.1294
 
