--- a/gradle.properties
+++ b/gradle.properties
@@ -6,13 +6,13 @@ mod_name=exotic-blocks
 exotic_blocks_version=0.13
 exotic_matter_version=1.13
 
-rei_version=3.2.15
+rei_version=3.2.21
 
 mc_tag = mc115
-minecraft_version=1.15-pre6
-yarn_mappings=1.15-pre6+build.1
+minecraft_version=1.15
+yarn_mappings=1.15+build.2
 loader_version=0.7.2+build.174
-fabric_version=0.4.20+build.273-1.15
+fabric_version=0.4.24+build.279-1.15
 
 cordage_mappings=1.15-pre1+build.1294
 
