--- a/gradle.properties
+++ b/gradle.properties
@@ -3,16 +3,16 @@ org.gradle.daemon=false
 
 group=grondag
 mod_name=exotic-blocks
-exotic_blocks_version=1.0
-exotic_matter_version=1.14
+exotic_blocks_version=1.1
+exotic_matter_version=1.15
 
-rei_version=3.2.33
+rei_version=3.3.12
 
 mc_tag = mc115
-minecraft_version=1.15.1
-yarn_mappings=1.15.1+build.17
-loader_version=0.7.2+build.175
-fabric_version=0.4.26+build.283-1.15
+minecraft_version=1.15.2-pre2
+yarn_mappings=1.15.2-pre2+build.5
+loader_version=0.7.4+build.177
+fabric_version=0.4.28+build.288-1.15
 
 cordage_mappings=1.15-pre1+build.1294
 
