--- a/gradle.properties
+++ b/gradle.properties
@@ -4,15 +4,15 @@ org.gradle.daemon=false
 group=grondag
 mod_name=exotic-blocks
 exotic_blocks_version=1.1
-exotic_matter_version=1.15
+exotic_matter_version=1.16
 
 rei_version=3.3.12
 
 mc_tag = mc115
-minecraft_version=1.15.2-pre2
-yarn_mappings=1.15.2-pre2+build.5
-loader_version=0.7.4+build.177
-fabric_version=0.4.28+build.288-1.15
+minecraft_version=1.15.2
+yarn_mappings=1.15.2+build.1
+loader_version=0.7.5+build.178
+fabric_version=0.4.29+build.290-1.15
 
 cordage_mappings=1.15-pre1+build.1294
 
