--- a/gradle.properties
+++ b/gradle.properties
@@ -4,15 +4,15 @@ org.gradle.daemon=false
 group=grondag
 mod_name=exotic-blocks
 exotic_blocks_version=1.2
-exotic_matter_version=1.17
+exotic_matter_version=1.18
 
-rei_version=3.3.12
+rei_version=4.0.11-unstable
 
 mc_tag = mc116
-minecraft_version=20w06a
-yarn_mappings=20w06a+build.3
-loader_version=0.7.8+build.184
-fabric_version=0.4.30+build.294-1.16
+minecraft_version=20w11a
+yarn_mappings=20w11a+build.1
+loader_version=0.7.8+build.187
+fabric_version=0.5.3+build.308-1.16
 
 cordage_mappings=1.15-pre1+build.1294
 
