--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ rei_version=4.3.6-unstable
 
 mc_tag = mc116
 minecraft_version=20w19a
-yarn_mappings=20w19a+build.14
+yarn_mappings=20w19a+build.14:v2
 loader_version=0.8.2+build.194
 fabric_version=0.10.8+build.345-1.16
 
