--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -26,20 +26,54 @@ repositories {
 dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}"
-	// mappings "grondag:cordage:${project.cordage_mappings}"
 	modApi "net.fabricmc:fabric-loader:${project.loader_version}"
 	modApi "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	
 	// dev env annotation support
 	compileOnly "org.apiguardian:apiguardian-api:1.0.0"
 	compileOnly "com.google.code.findbugs:jsr305:3.0.2"
-	
-	modImplementation ("grondag:exotic-matter-${project.mc_tag}:${project.exotic_matter_version}.+") {
+		
+	modImplementation ("io.github.cottonmc:Jankson-Fabric:${jankson_version}") {
         exclude group :"net.fabricmc.fabric-api"
-	}
-	
-	modImplementation ("me.shedaniel:RoughlyEnoughItems:${project.rei_version}") {
+        exclude group :"net.fabricmc.fabric-loader"
+    }
+    
+    modImplementation ("me.shedaniel:RoughlyEnoughItems:${project.rei_version}") {
         exclude module:  "ModMenu"
         exclude group: "net.fabricmc.fabric-api"
+        exclude group :"net.fabricmc.fabric-loader"
 	}
+    
+	modImplementation ("me.shedaniel.cloth:config-2:${clothconfig_version}") {
+        exclude group :"io.github.prospector.modmenu"
+        exclude group :"net.fabricmc.fabric-api"
+        exclude group :"net.fabricmc.fabric-loader"
+    }
+	
+	modImplementation ("io.github.prospector:modmenu:${project.modmenu_version}") {
+        exclude group :"net.fabricmc.fabric-api"
+        exclude group :"net.fabricmc.fabric-loader"
+    }
+    
+	modImplementation ("grondag:exotic-matter-${project.mc_tag}:${project.exotic_matter_version}.+") { transitive = false }
+	modImplementation ("grondag:exotic-art-core-${project.mc_tag}:${project.exotic_art_core_version}.+") { transitive = false }
+	modImplementation ("grondag:frex-${project.mc_tag}:${project.frex_version}.+") { transitive = false }
+	modImplementation ("grondag:fermion-${project.mc_tag}:${project.fermion_version}.+") { transitive = false }
+	modImplementation ("grondag:fermion-modkeys-${project.mc_tag}:${project.fermion_modkeys_version}.+") { transitive = false }
+    modImplementation ("grondag:fermion-varia-${project.mc_tag}:${project.fermion_varia_version}.+") { transitive = false }
+    modImplementation ("grondag:fermion-orientation-${project.mc_tag}:${project.fermion_orientation_version}.+") { transitive = false }
+    modImplementation ("grondag:special-circumstances-${project.mc_tag}:${project.special_circumstances_version}.+") { transitive = false }
+	modImplementation ("grondag:frex-${project.mc_tag}:${project.frex_version}.+") { transitive = false }
+	
+	if (!(gradle.startParameter.taskNames.contains("publish") || gradle.startParameter.taskNames.contains("publishToMavenLocal"))) {
+		include "grondag:exotic-matter-${project.mc_tag}:${project.exotic_matter_version}.+"
+		include "grondag:exotic-art-core-${project.mc_tag}:${project.exotic_art_core_version}.+"
+		include "grondag:fermion-${project.mc_tag}:${project.fermion_version}.+"
+		include "grondag:fermion-modkeys-${project.mc_tag}:${project.fermion_modkeys_version}.+"
+	    include "grondag:fermion-varia-${project.mc_tag}:${project.fermion_varia_version}.+"
+	    include "grondag:fermion-orientation-${project.mc_tag}:${project.fermion_orientation_version}.+"
+	    include "grondag:special-circumstances-${project.mc_tag}:${project.special_circumstances_version}.+"
+		include "io.github.cottonmc:Jankson-Fabric:${jankson_version}"
+		include "me.shedaniel.cloth:config-2:${clothconfig_version}"
+ 	}
 }
