--- a/gradle.properties
+++ b/gradle.properties
@@ -3,18 +3,26 @@ org.gradle.daemon=false
 
 group=grondag
 mod_name=exotic-blocks
-exotic_blocks_version=1.3
-exotic_matter_version=1.19
+exotic_blocks_version=1.4
+exotic_matter_version=2.0
+exotic_art_core_version=1.0
+fermion_version=2.0
+special_circumstances_version=1.6
+fermion_modkeys_version=1.8
+fermion_varia_version=2.0
+fermion_orientation_version=1.0
+frex_version=2.0
 
-rei_version=4.3.6-unstable
+jankson_version=2.0.0+j1.2.0
+clothconfig_version=4.4.0-unstable
+modmenu_version=1.11.6+build.11
+rei_version=4.3.12-unstable
 
 mc_tag = mc116
 minecraft_version=20w21a
 yarn_mappings=20w21a+build.15:v2
 loader_version=0.8.4+build.198
 fabric_version=0.10.10+build.347-1.16
-
-cordage_mappings=1.15-pre1+build.1294
 
 license_header=APACHE
 
