--- a/gradle.properties
+++ b/gradle.properties
@@ -4,25 +4,25 @@ org.gradle.daemon=false
 group=grondag
 mod_name=exotic-blocks
 exotic_blocks_version=1.4
-exotic_matter_version=2.2
+exotic_matter_version=2.3
 exotic_art_core_version=1.0
 fermion_version=2.1
 special_circumstances_version=1.6
 fermion_modkeys_version=1.8
 fermion_varia_version=2.1
 fermion_orientation_version=1.0
-frex_version=2.3
+frex_version=3.0
 
 jankson_version=3.0.0+j1.2.0
-clothconfig_version=4.5.5
-modmenu_version=1.12.1+build.15
-rei_version=4.5.2
+clothconfig_version=4.5.6
+modmenu_version=1.12.2+build.17
+rei_version=4.5.5
 
 mc_tag = mc116
-minecraft_version=1.16-rc1
-yarn_mappings=1.16-rc1+build.4:v2
+minecraft_version=1.16.1
+yarn_mappings=1.16.1+build.7:v2
 loader_version=0.8.8+build.202
-fabric_version=0.12.5+build.367-1.16
+fabric_version=0.14.0+build.371-1.16
 
 license_header=APACHE
 
