--- a/build.gradle
+++ b/build.gradle
@@ -159,12 +159,13 @@ githubRelease {
 		repo project.github_repository
 	}
 
-	tagName project.version
+	body changelog()
+  
+	tagName project.version + "-unstable"
 	targetCommitish { org.ajoberstar.grgit.Grgit.open(dir: ".").branch.current().name }
-	releaseName project.version
-
-	FilenameFilter filter = { dir, filename -> filename.contains(project.version) && !filename.contains("-dev.jar") }
-	releaseAssets = jar.destinationDir.listFiles filter
+	releaseName project.version + " Unstable"
+	prerelease true
+	releaseAssets = remapJar
 }
 
 curseforge {
