--- a/gradle.properties
+++ b/gradle.properties
@@ -6,23 +6,23 @@ mod_name=exotic-blocks
 exotic_blocks_version=1.6
 exotic_matter_version=2.10
 exotic_art_core_version=1.0
-fermion_version=2.5
+fermion_version=2.6
 special_circumstances_version=1.7
 fermion_modkeys_version=1.9
-fermion_varia_version=2.3
+fermion_varia_version=2.4
 fermion_orientation_version=1.1
-frex_version=3.3
+frex_version=3.4
 
 jankson_version=3.0.1+j1.2.0
-clothconfig_version=4.7.0-unstable
+clothconfig_version=4.8.2
 modmenu_version=1.14.6+build.31
-rei_version=5.2.3
+rei_version=5.6.1
 
 mc_tag = mc116
-minecraft_version=1.16.2
-yarn_mappings=1.16.2+build.46:v2
-loader_version=0.9.2+build.206
-fabric_version=0.20.1+build.401-1.16
+minecraft_version=1.16.3
+yarn_mappings=1.16.3+build.30:v2
+loader_version=0.10.1+build.209
+fabric_version=0.23.0+build.410-1.16
 
 license_header=APACHE
 
