--- a/gradle.properties
+++ b/gradle.properties
@@ -6,23 +6,24 @@ mod_name=exotic-blocks
 exotic_blocks_version=1.6
 exotic_matter_version=2.10
 exotic_art_core_version=1.0
-fermion_version=2.6
+fermion_version=2.7
 special_circumstances_version=1.7
 fermion_modkeys_version=1.9
-fermion_varia_version=2.4
+fermion_varia_version=2.5
 fermion_orientation_version=1.1
 frex_version=4.0
 
 jankson_version=3.0.1+j1.2.0
 clothconfig_version=4.8.2
 modmenu_version=1.14.6+build.31
-rei_version=5.6.2
+rei_version=5.7.0
 
 mc_tag = mc116
-minecraft_version=1.16.3
-yarn_mappings=1.16.3+build.47:v2
-loader_version=0.10.2+build.210
-fabric_version=0.24.0+build.411-1.16
+minecraft_version=1.16.4-rc1
+yarn_mappings=1.16.4-rc1+build.2:v2
+loader_version=0.10.5+build.213
+fabric_version=0.24.3+build.414-1.16
+loom_version=0.5.33
 
 license_header=APACHE
 
