--- a/gradle.properties
+++ b/gradle.properties
@@ -14,16 +14,16 @@ fermion_orientation_version=1.1
 frex_version=4.0
 
 jankson_version=3.0.1+j1.2.0
-clothconfig_version=4.8.2
-modmenu_version=1.14.6+build.31
-rei_version=5.7.0
+clothconfig_version=4.8.3
+modmenu_version=1.14.13+build.19
+rei_version=5.8.8
 
 mc_tag = mc116
 minecraft_version=1.16.4
-yarn_mappings=1.16.4+build.1:v2
-loader_version=0.10.6+build.214
-fabric_version=0.25.1+build.416-1.16
-loom_version=0.5.33
+yarn_mappings=1.16.4+build.7:v2
+loader_version=0.10.8
+fabric_version=0.28.0+1.16
+loom_version=0.5-SNAPSHOT
 
 license_header=APACHE
 
