--- a/gradle.properties
+++ b/gradle.properties
@@ -30,3 +30,9 @@ license_header=APACHE
 
 github_repository_owner=grondag
 github_repository=exotic-blocks
+curseforge_id=339561
+release_type=release
+release_version=1.16.4
+required_dep_slugs=fabric-api
+optional_dep_slugs=modmenu, roughly-enough-items
+embedded_lib_slugs=frex, fermion, cloth-config, jankson, exotic-matter-library
