--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -38,11 +38,11 @@ dependencies {
         exclude group :"net.fabricmc.fabric-loader"
     }
     
-    //modImplementation ("me.shedaniel:RoughlyEnoughItems:${project.rei_version}") {
-    //    exclude module:  "ModMenu"
-    //    exclude group: "net.fabricmc.fabric-api"
-    //    exclude group :"net.fabricmc.fabric-loader"
-	//}
+    modImplementation ("me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}") {
+        exclude module:  "ModMenu"
+        exclude group: "net.fabricmc.fabric-api"
+        exclude group :"net.fabricmc.fabric-loader"
+    }
     
 	modImplementation ("me.shedaniel.cloth:cloth-config-fabric:${clothconfig_version}") {
         exclude group :"io.github.prospector.modmenu"
