--- a/fabric/project.gradle
+++ b/fabric/project.gradle
@@ -7,15 +7,12 @@ configurations {
 
 dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-  //modImplementation(fabricApi.module("fabric-api-base", project.fabric_version))
-  //modImplementation(fabricApi.module("fabric-resource-loader-v0", project.fabric_version))
-  //modImplementation(fabricApi.module("fabric-object-builder-api-v1", project.fabric_version))
-  //modImplementation(fabricApi.module("fabric-networking-api-v1", project.fabric_version))
-
+  
 	modIncludeImplementation("grondag:exotic-matter-fabric-mc118:3.0.430:fat")
   modIncludeImplementation("io.vram:dtklib:1.0.3")
   modIncludeImplementation("io.vram:modkeys-fabric-mc118:1.0.8")
 
+  modApi "dev.architectury:architectury-fabric:3.2.60"
 	modCompileOnly "me.shedaniel:RoughlyEnoughItems-fabric:7.1.357"
 	modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:7.1.357"
   modCompileOnly "com.terraformersmc:modmenu:3.0.1"
