--- a/fabric/project.gradle
+++ b/fabric/project.gradle
@@ -7,17 +7,17 @@ configurations {
 
 dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-  
-	// Note that BitKit is included via FREX, FREX included via XM
-	modIncludeImplementation("grondag:exotic-matter-fabric-mc119:3.0.444:fat")
-	modIncludeImplementation("io.vram:dtklib:1.0.6")
-	modIncludeImplementation("io.vram:modkeys-fabric-mc119:1.0.11")
 
-	modApi "dev.architectury:architectury-fabric:5.7.28"
-	modCompileOnly "me.shedaniel:RoughlyEnoughItems-fabric:9.1.500"
-	modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:9.1.500"
-	modCompileOnly "com.terraformersmc:modmenu:4.0.0-beta.4"
-	modRuntimeOnly "com.terraformersmc:modmenu:4.0.0-beta.4"
+	// Note that BitKit is included via FREX, FREX included via XM
+	modIncludeImplementation("grondag:exotic-matter-fabric-mc119:3.0.450:fat")
+	modIncludeImplementation("io.vram:dtklib:1.0.6")
+	modIncludeImplementation("io.vram:modkeys-fabric-mc119:1.0.12")
+
+	modApi "dev.architectury:architectury-fabric:6.2.43"
+	modCompileOnly "me.shedaniel:RoughlyEnoughItems-fabric:9.1.530"
+	modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:9.1.530"
+	modCompileOnly "com.terraformersmc:modmenu:4.0.6"
+	modRuntimeOnly "com.terraformersmc:modmenu:4.0.6"
 }
 
 sourceSets {
